# Satellite_images

./: .gitignore  README.md  data.ipynb  pyproject.toml
project/: data.py  main.py
